--- a/app/assets/scss/partials/_generic.scss
+++ b/app/assets/scss/partials/_generic.scss
@@ -4,6 +4,14 @@
 }
 
 .navbar-item {
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.breadcrumb-arrow {
+  padding: 6px;
+}
+
+.breadcrumb-index {
+  padding-bottom: 12px;
 }
